<resources>
    <string name="app_name">MovieCatalogue</string>
    <string name="title_activity_detail_movie">Detail Movie</string>
    <string name="title_activity_detail_tv_show">Detail Tv Show</string>

    <string name="home">Home</string>
    <string name="favorite">Favorite</string>

    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="title">Title</string>
    <string name="release_year">Release Year</string>
    <string name="genre">Genre</string>
    <string name="duration">Duration</string>
    <string name="score">Score</string>
    <string name="overview">Overview</string>
    <string name="content_image">content_image</string>
    <string name="share">Share</string>
    <string name="content_description_favorite">favorite</string>
    <string name="content_description_share">share</string>

</resources>